--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,8 +17,10 @@
 
 #cursor {
 	position: absolute;
+	pointer-events: none;
 	width: 1px;
-	background-color: #111;
+	background-color: #000;
+	z-index: 10;
 }
 
 .blink {
@@ -63,14 +65,19 @@ article {
 }
 
 #button-wrapper {
+	float: right;
 	margin: 50px 0 0 20px;
 	vertical-align: top;
-	display: inline-block;
 	width: 100px;
 }
 
 ::selection, .selected {
-	background-color: #ccc;
+	background-color: rgba(0, 0, 0, 0.2);
+	color: #111;
+}
+
+.imitate-line-break::after {
+	content: " ";
 	color: #111;
 }
 
@@ -89,8 +96,10 @@ article {
 	transition: color 200ms ease-out, margin 200ms ease-out;
 }
 
-.text-content > span{
+.text-content {
 	white-space: pre-wrap;
+	margin: 0;
+	transition: opacity 100ms linear;
 }
 
 p:not(#author) {
@@ -103,17 +112,17 @@ p:not(#author) {
 	cursor: text;
 	display: block;
 	font-family: 'OpenSans Bold';
-	font-size: 1.8em;
+	font-size: 32px;
 	font-weight: 600;
 	color: #000;
 }
 
 #author {
-	margin-top: 0px;
+	margin: 0;
 	cursor: text;
 	display: block;
 	font-family: 'OpenSans';
-	font-size: 15px;
+	font-size: 14px;
 }
 
 #content-wrapper > h1::before, #content-wrapper > p::before {
@@ -136,6 +145,15 @@ p:not(#author) {
 #title.empty::before, #author.empty::before {
 	font-family: 'OpenSans Light';
 	font-weight: 100;
+}
+
+#date {
+	transition: opacity 100ms linear;
+}
+
+#date::before {
+	padding: 0 7px;
+	content: "\2022";
 }
 
 .bad {
@@ -226,7 +244,7 @@ textarea {
 	}
 	#button-wrapper {
 		margin: 20px 0;
-		display: block;
+		float: left;
 	}
 }
 
