--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/static/css/styles.css">
-	<title>New Article</title>
+	<title></title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta property="og:type" content="article" />
+	<meta property="og:site_name" content="Articles" />
+	<meta property="og:title" content="{{meta_tags['title']}}" />
+	<meta property="og:description" content="{{meta_tags['description']}}" />
+	<meta property="og:url" content="{{meta_tags['url']}}" />
+	<!-- <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" /> -->
+	<link rel="stylesheet" href="/static/css/styles.css" />
 </head>
 <body>
 	<main>
 		<article>
 			<div id="cursor" class="transparent"></div>
-			<div id="content-wrapper" contenteditable="true" spellcheck="false">
-				<h1 id="title" class="empty" data-placeholder="Title" data-font="600 1.8em OpenSans Bold">
-					<span class="text-content">
-						<br>
-					</span>
-				</h1>
-				<p id="author" class="empty" data-placeholder="Author's name" data-font="15px OpenSans">
-					<span class="text-content">
-						<br>
-					</span>
-				</p>
-				<p class="empty" data-placeholder="Article...">
-					<span class="text-content">
-						<br>
-					</span>
-				</p>
-			</div>
+			<div id="content-wrapper" contenteditable="true" spellcheck="false"><h1 id="title" class="" data-placeholder="Title" data-font="600 1.8em OpenSans Bold"><span class="text-content"></span><br></h1><p id="author" class="" data-placeholder="Author's name" data-font="15px OpenSans"><span class="text-content"></span><br></p><p class="" data-placeholder="Article..."><span class="text-content"></span><br></p></div>
 			<textarea autocomplete="off"></textarea>
-		</article><!--
-		кто удалит комент тот чмо
-		--><div id="button-wrapper">
+		</article>
+		<div id="button-wrapper">
 			<button class="button" style="display: none;">publish</button>
 		</div>
 	</main>
