implement undo/redo buffer

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
 			<button class="button" style="display: none;">publish</button>
 		</div>
 	</main>
+	<script src="/static/js/diff.js"></script>
+	<script src="/static/js/undoredo.js"></script>
 	<script src="/static/js/index.js"></script>
 </body>
 </html>
